Gym booking website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ShadowFit — Batman Edition</title>
+  <title>ShadowFit — Batman Edition 🦇</title>
   <meta name="description" content="ShadowFit — gym landing page (Batman theme) with polished UI and demo interactions" />
   <link rel="stylesheet" href="style.css" />
 </head>
