Updated the full UI (gym name changed)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ShadowFit — Batman Edition 🦇</title>
-  <meta name="description" content="ShadowFit — gym landing page (Batman theme) with polished UI and demo interactions" />
+  <title>BEAST FITNESS — Strength Has No Limits 🦁</title>
+  <meta name="description" content="BEAST FITNESS — Unleash your potential with personalised programs and elite trainers." />
 </head>
 <body>
   <div id="root"></div>
